<resources>
    <string name="app_name">MobileUI</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="password_not_matched">Password not matched ?</string>
    <string name="login">Login</string>
    <string name="do_you_have_an_account_signup">Do you have an account?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coupon">COUPON</string>
    <string name="enter_your_coupon_code_here">Enter your coupon code here</string>
    <string name="use">USE</string>
    <string name="subtotal">SUBTOTAL</string>

    <!--spinner-->
    <string-array name="names">
        <item>Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <!--contact seller spinner-->
    <string-array name="unit">
        <item>Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <!--nav drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
