<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/logo"
                android:padding="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_below="@+id/linear"
            android:id="@id/linear_two"
            android:background="@color/colorWhite">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/linear"
                android:elevation="4dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login to your account"
                android:textSize="@dimen/large_text_size"
                android:fontFamily="@font/sans"
                android:elevation="4dp"
                android:shadowColor="@color/colorGrey"
                android:shadowDy="@android:integer/config_shortAnimTime"
                android:shadowRadius="@android:integer/config_shortAnimTime"
                android:shadowDx="@android:integer/config_shortAnimTime"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_two"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/editTextUername"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/sans"
                android:hint="Phone or email"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="260dp"
                android:layout_height="1dp"
                android:background="@color/colorWhite" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif"
                android:hint="Password"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="260dp"
                android:layout_height="1dp"
                android:background="@color/colorWhite" />

            <TextView
                android:id="@+id/textViewPasswordNotMatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="-5dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/medium_text_size"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/password_not_matched"
                android:textColor="@color/colorOrange" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_background"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans"
                    android:text="@string/do_you_have_an_account_signup"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/small_sixteen_text_size" />

                <TextView
                    android:id="@+id/textViewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text=" Signup"
                    android:textAlignment="center"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/medium_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:fontFamily="@font/sans"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/medium_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite" />


            </LinearLayout>

            <Button
                android:id="@+id/buttonFacebook"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_marginTop="26dp"
                android:background="@color/colorFacebook"
                android:baselineAligned="false"
                android:drawableLeft="@drawable/ic_action_facebook"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sans"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/small_sixteen_text_size" />

            <Button
                android:id="@+id/buttonGoogle"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGoogle"
                android:drawableLeft="@drawable/ic_action_google"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sans"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/small_sixteen_text_size" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>