<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.puza.mobileui.fragments.CartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cartRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f1f1f1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="14dp"
                    android:textColor="#b4acac"
                    android:inputType="textPersonName"
                    android:text="@string/enter_your_coupon_code_here"
                    android:paddingLeft="10dp"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5f44af"
                    android:layout_weight="1"
                    android:text="@string/use"
                    android:background="#fff"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f1f1f1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2 items"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rs. 52,850.00"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:layout_gravity="end"
                        android:textAlignment="textEnd"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>

                <View
                    android:layout_width="320dp"
                    android:layout_gravity="center"
                    android:layout_height="1dp"
                    android:background="#a39e9e" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rs. 52,850.00"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_gravity="end"
                        android:textAlignment="textEnd"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/button_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Proceed to checkout"
                    android:background="@color/colorOrange"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/button_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Call to order"
                    android:textColor="#605a5a"
                    android:background="@drawable/button_backgroung_rectangle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="#f1f1f1"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Sub Total"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=":"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="$12.97"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Discount"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=":"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="$1.00"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Delivery Charges"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=":"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="$2.00"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Total"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=":"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="$6.00"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/continuePayment"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="20dp"
                    android:background="@color/colorPrimary"
                    android:text="Continue Payment"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>